# hello

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: python-tests.yml
python/hello/: __init__.py  hello_bindings.cpp
python/hellothere/: hello_bindings.cpp
python/hellothere_package/: __init__.py  hellothere_bindings.cpp
python/hellothere_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: hello.cpp  hello.hpp
tests/: test_hellothere.py
